- Add debug step and change the gradlew path

--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -16,5 +16,10 @@ jobs:
           echo "JAVA_HOME: $JAVA_HOME"
           java --version
           native-image --version
+      - name: Debug Directory
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Listing files:"
+          ls -la
       - name: Example step using Gradle plugin # https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html
-        run: gradlew nativeCompile
+        run: ./gradlew nativeCompile
