--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -24,4 +24,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: spring-graalvm-app-${{ matrix.os }}
-          path: ./build/native/nativeCompile/spring-graalvm-app
+          path: |
+            ${{ github.workspace }}/build/native/nativeCompile/spring-graalvm-app*
+            ${{ github.workspace }}\build\native\nativeCompile\spring-graalvm-app*.exe
